# robodog

./: .dimos-base-requirements.txt  .env.development  .env.example  .env.production  .env.webrtc_test  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW_SUMMARY.md  DEVLOG.md  ENV_CONFIG.md  PROJECT_SETUP_STATUS.md  QUICKSTART_DIMOS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SCRIPTS.md  START_SCRIPT_SUMMARY.md  TODO.md  WEBRTC_TEST_QUICKSTART.md  shadowhound.repos  source_shadowhound.sh  start.sh  test_backend_validation.py  test_topic_visibility.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: copilot-instructions.md
config/: README.md  nav2_params.yaml
configs/: cloud_openai.yaml  laptop_dev_ollama.yaml  thor_onboard_ollama.yaml
docs/: AGENT_QUICK_REFERENCE.txt  AGENT_REFACTOR_ANALYSIS.md  AGENT_TASKS.md  ARCHITECTURE_CLARIFICATION.md  ARCH_UPDATE_SUMMARY.md  BACKEND_QUICK_REFERENCE.md  BACKEND_VALIDATION_SUMMARY.md  CACHE_CLEARING_GUIDE.md  CAMERA_ARCHITECTURE.md  CAMERA_FEED_INTEGRATION.md  CHATGPT_INTEGRATION.md  CODEX_24_04_PLAN.md  CODEX_ENVIRONMENT_STRATEGY.md  COLCON_IGNORE  COPILOT_CLI_SETUP.md  DEBUGGING_ROBOT_COMMANDS.md  DEPLOYMENT_TOPOLOGY.md  DEVELOPMENT_TRACKING.md  DIMOS_CAPABILITIES.md  DIMOS_INTEGRATION.md  DIMOS_VISION_CAPABILITIES.md  ENVIRONMENT_VARIABLES.md  EOD_SUMMARY_2025-10-10.md  FEATURE_COMPLETE_OLLAMA.md  INDENTATION_FIX.md  KNOWN_ISSUES.md  (+62 more)
src/shadowhound_bringup/: README.md  package.xml  setup.cfg  setup.py
src/shadowhound_bringup/config/: default.yaml
src/shadowhound_bringup/launch/: shadowhound.launch.py
(+78 files in other folders)
