<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shadowhound_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configurations for ShadowHound autonomous robot system</description>
  <maintainer email="developer@shadowhound.local">ShadowHound Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>shadowhound_mission_agent</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>